--- a/public/lessons-content/crypto-ciphers.html
+++ b/public/lessons-content/crypto-ciphers.html
@@ -140,4 +140,7 @@ K, W, X, Y, Z : < 1%</code></pre>
     <p>
         L'étude de la cryptographie classique, bien qu'obsolète en pratique, offre un aperçu fondamental des défis et des solutions historiques de la sécurité de l'information. Le passage des méthodes manuelles simples à des systèmes mécaniques complexes a ouvert la voie aux algorithmes mathématiques robustes qui protègent aujourd'hui nos données. C'est le cheminement de la simple substitution de lettres à l'utilisation de fonctions mathématiques sophistiquées, qui forme la fondation de notre monde numérique sécurisé.
     </p>
+    <p>
+        Leçon créée par Hugo Bruchon.
+    </p>
 </section>
