--- a/public/lessons-content/crypto-intro.html
+++ b/public/lessons-content/crypto-intro.html
@@ -153,4 +153,7 @@ Hash 2  : 0725458c037835f8f67645bea651e45722df43c2c1c1f2b545f201046e757f12</code
     <p>
         La sécurité de notre monde numérique ne repose pas sur une seule technologie miraculeuse, mais sur une orchestration précise de ces trois piliers fondamentaux. Le chiffrement symétrique pour la vitesse, le chiffrement asymétrique pour l'échange de secrets et l'authentification, et le hachage pour l'intégrité, forment ensemble un système de confiance robuste. C’est cette combinaison qui assure la confidentialité, l'intégrité et l'authenticité de la quasi-totalité de nos échanges sur le web moderne, du simple email à la transaction bancaire la plus sensible.
     </p>
+    <p>
+        Leçon créée par Hugo Bruchon.
+    </p>
 </section>
