--- a/public/lessons-content/forensics-intro.html
+++ b/public/lessons-content/forensics-intro.html
@@ -110,4 +110,7 @@ Coordonnées GPS     : 44°54'58.819"N 4°54'46.82"E</code></pre>
     <p>
         Par une méthodologie rigoureuse, elle transforme le chaos d'un incident numérique en une chronologie claire et factuelle. En reconstituant la chaîne des événements et en identifiant les actions menées, l'analyse forensique établit une vérité numérique objective. Son objectif ultime est de matérialiser ces découvertes sous forme de preuves tangibles et recevables, capables d'éclairer une décision de justice ou de motiver une action interne.
     </p>
+    <p>
+        Leçon créée par Hugo Bruchon.
+    </p>
 </section>
