--- a/public/lessons-content/forensics-metadata.html
+++ b/public/lessons-content/forensics-metadata.html
@@ -114,4 +114,7 @@ PE Header Time : 2024/08/12 22:10:05 <-- INCOHÉRENCE !</code></pre>
     <p>
         L'analyse des métadonnées est un art qui se situe à la croisée de la technique et de l'enquête. La compétence clé n'est pas seulement de savoir extraire une information, mais de savoir la corréler. C'est en croisant les données du système avec celles des applications, en comparant les timestamps et en questionnant les incohérences que l'analyste transforme des informations éparses en une chronologie cohérente et défendable.
     </p>
+    <p>
+        Leçon créée par Hugo Bruchon.
+    </p>
 </section>
