--- a/public/lessons-content/network-intro.html
+++ b/public/lessons-content/network-intro.html
@@ -138,4 +138,7 @@ ALLOW TCP from 192.168.0.0/24 to ANY port 80,443</code></pre>
     <p>
         La structure des communications réseau est régie par l'interaction entre les ports, qui canalisent le trafic, et les protocoles, qui en définissent les règles. Au sein de cette architecture, le pare-feu s'impose comme un composant de sécurité essentiel. Une compréhension approfondie de la manière dont ces trois éléments interagissent est le prérequis indispensable à toute démarche de sécurisation d'une infrastructure réseau.
     </p>
+	<p>
+        Leçon créée par Hugo Bruchon.
+    </p>
 </section>
