--- a/public/lessons-content/osint-intro.html
+++ b/public/lessons-content/osint-intro.html
@@ -81,4 +81,7 @@ Registrant Country: FR</code></pre>
     </ul>
     <h3>Pistes pour aller plus loin :</h3>
     <p>Pour approfondir, explorez les sites de Bellingcat et OSINT Curious. Concernant les outils, le site OSINT Framework est une ressource incontournable : il s'agit d'une carte mentale interactive qui référence des centaines d'outils OSINT classés par catégorie.</p>
+	<p>
+        Leçon créée par Hugo Bruchon.
+    </p>
 </section>
