--- a/public/lessons-content/security-passwords.html
+++ b/public/lessons-content/security-passwords.html
@@ -122,4 +122,7 @@ MonServiceEnLigne
         <li><strong>Essayez un gestionnaire de mots de passe :</strong> Explorez l'un des gestionnaires mentionnés pour vous habituer à son fonctionnement.</li>
         <li><strong>Activez le 2FA :</strong> Vérifiez les paramètres de sécurité de vos comptes importants et activez le 2FA partout où c'est possible.</li>
     </ul>
+    <p>
+        Leçon créée par Hugo Bruchon.
+    </p>
 </div>
