--- a/public/lessons-content/stega-intro.html
+++ b/public/lessons-content/stega-intro.html
@@ -99,6 +99,9 @@ Fréquence du bit 1 : 24.7%</code></pre>
 <section class="content-block">
     <h2><i class="fas fa-flag-checkered" aria-hidden="true"></i>Conclusion</h2>
     <p>
-        La stéganographie est un fascinant jeu du chat et de la souris. D'un côté, on invente des manières toujours plus subtiles de cacher des informations. De l'autre, des stéganalystes développent des algorithmes, souvent basés sur l'IA, toujours plus fins pour les détecter. Cette lutte nous rappelle que la menace ou le secret ne se trouve pas toujours dans ce qui est visiblement suspect, mais parfois, dans ce qui se cache à la vue de tous.
+      La stéganographie est un fascinant jeu du chat et de la souris. D'un côté, on invente des manières toujours plus subtiles de cacher des informations. De l'autre, des stéganalystes développent des algorithmes, souvent basés sur l'IA, toujours plus fins pour les détecter. Cette lutte nous rappelle que la menace ou le secret ne se trouve pas toujours dans ce qui est visiblement suspect, mais parfois, dans ce qui se cache à la vue de tous.
+    </p>
+    <p>
+      Leçon créée par Hugo Bruchon.
     </p>
 </section>
