--- a/public/lessons-content/web-cookies.html
+++ b/public/lessons-content/web-cookies.html
@@ -111,4 +111,7 @@ Cookie: sessionid=u7xGz...</code></pre>
     <p>
         La gestion des sessions via les cookies est un pilier de l'expérience web, mais elle constitue aussi une surface d'attaque majeure. Comprendre le cycle de vie d'un cookie, la signification de ses attributs de sécurité et les vecteurs d'attaque courants est une nécessité. Une configuration rigoureuse est essentielle pour protéger les comptes et les données des utilisateurs.
     </p>
+    <p>
+        Leçon créée par Hugo Bruchon.
+    </p>
 </section>
