--- a/public/lessons-content/web-sql-basic.html
+++ b/public/lessons-content/web-sql-basic.html
@@ -116,4 +116,7 @@ SELECT * FROM utilisateurs WHERE username = '' OR '1'='1' -- ';</code></pre>
     <h2><i class="fas fa-flag-checkered" aria-hidden="true"></i>Conclusion</h2>
     <p>L'injection SQL est une vulnérabilité critique qui découle du mélange du code et des données de l'utilisateur. La construction de requêtes par concaténation est une pratique dangereuse et obsolète.</p>
     <p>La prévention efficace et moderne repose sur l'adoption systématique des <strong>requêtes préparées</strong> (souvent via un ORM), complétée par une validation rigoureuse des entrées et le principe du moindre privilège.</p>
+    <p>
+        Leçon créée par Hugo Bruchon.
+    </p>
 </section>
